<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/lightText"
        android:gravity="end|bottom"
        android:padding="10dp"
        android:text="@string/Text"
        android:textColor="@color/white"
        android:textSize="48sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/black"
        >

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_7"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights,UsingOnClickInXml" />

        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_8"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_9"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/Divide"
            android:textSize="22sp"
            android:textColor="#9d4edd"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/black"
        >

        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_4"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="NestedWeights,UsingOnClickInXml" />

        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_5"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_6"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/Multiply"
            android:textSize="22sp"
            android:textColor="#9d4edd"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/black"
        >

        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_1"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="NestedWeights,UsingOnClickInXml" />

        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_2"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_3"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnSubtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/minus"
            android:textColor="#9d4edd"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/black"
        >


        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDecimalPoint"
            android:text="@string/dot"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="NestedWeights,UsingOnClickInXml" />

        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_0"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="NestedWeights,UsingOnClickInXml" />


        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnClr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClear"
            android:text="@string/clr"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/Add"
            android:textSize="22sp"
            android:textColor="#9d4edd"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml" />



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/black"
        >

        <Button
            android:layout_margin="2dp"
            android:id="@+id/Equals"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:onClick="onEqual"
            android:text="@string/equal"
            android:textColor="#9d4edd"
            android:textSize="22sp"
            android:textStyle="bold"


            tools:ignore="NestedWeights,UsingOnClickInXml" />






    </LinearLayout>



</LinearLayout>
